--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
   <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Jonathan Rocha's Portfolio: Experienced web developer with a passion for creating beautiful, user-friendly websites. Check out my work and get in touch!" />
         <meta name="author" content="" />
         <title>Resume - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
