--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <h2>Contact Me</h2>
                 <p>You can reach me at <a href="mailto:jon.rocha@outlook.com">jon.rocha@outlook.com</a>.</p>
                 <!-- Contact Form -->
-                <form action="https://formspree.io/your@email" method="POST">
+                <form action="https://formspree.io/jon.rocha@outlook.com" method="POST">
                     <label for="name">Your Name:</label>
                     <input type="text" id="name" name="name">
                     <label for="email">Your Email:</label>
