--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="description" content="Jonathan Rocha's Portfolio: Experienced web developer with a passion for creating beautiful, user-friendly websites. Check out my work and get in touch!" />
         <meta name="author" content="" />
         <title>Resume - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Hero Section -->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jonathan Rocha</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../assets/img/profile.jpg" alt="Profile picture of Jonathan Rocha" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/assets/img/profile.jpg" alt="Profile picture of Jonathan Rocha" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -218,6 +218,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="../js/scripts.js"></script>
+        <script src="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/js/scripts.js"></script>
     </body>
 </html>
