--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> Web Developer</h3>
                             <div class="subheading mb-3">DRS - Dumpster Rental Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>As a Web Developer at DRS - Dumpster Rental Solutions, I am responsible for the design, creation, and maintenance of the company's website and web applications. My role involves utilizing various coding languages to create user-friendly, responsive, and SEO-optimized interfaces that enhance the user experience and drive business goals. Additionally, I work cross-functionally with marketing and business teams to integrate and update content, optimize our web presence, and ensure the alignment of the website with company branding and strategies. Regular system diagnostics and troubleshooting form a key part of my role, ensuring optimal website functionality and security at all times.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Special  Education Teacher</h3>
                             <div class="subheading mb-3">Wayside Middle School - Austin, TX</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>As a Special Education Teacher at Wayside Middle School, I played a crucial role in providing individualized instruction tailored to students with various special needs. I developed and implemented Individualized Education Programs (IEPs), ensuring they met each student's unique needs and promoted educational, personal, and social growth. Collaboration with other teachers, therapists, and parents was a vital part of my role, working together to create supportive, inclusive learning environments. Additionally, I implemented effective classroom management techniques, assessed student progress, and continually adapted teaching methods to optimize student understanding and engagement.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - December 2020</span></div>
                     </div>
@@ -96,7 +96,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Special  Education Teacher Assistant</h3>
                             <div class="subheading mb-3">IDEA Bluff Springs - Austin, TX </div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>As a Special Education Teacher Assistant at IDEA Bluff Springs, I provided essential support to the lead Special Education Teacher and directly assisted students with various special needs. My duties included helping implement Individualized Education Programs (IEPs), managing classroom logistics, and assisting students with daily tasks. I facilitated a safe, inclusive learning environment, ensuring each student felt understood, supported, and empowered to succeed. My role also required regular communication with parents, teachers, and other professionals, fostering a holistic approach to special education.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2016 - May 2018</span></div>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Special  Education Teacher Assistant</h3>
                             <div class="subheading mb-3">Lee  Means Elementary - Harlingen, TX</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>In my role as a Special Education Teacher Assistant at Lee Means Elementary, I supported the lead Special Education Teacher in creating and fostering a compassionate, inclusive learning environment for students with special needs. My responsibilities included aiding in the implementation of Individualized Education Programs (IEPs), assisting students with daily tasks, and providing classroom support. I closely collaborated with teachers, therapists, and parents to ensure all students received the personalized care and educational resources they needed. My contributions played a significant role in promoting positive student development and progress.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2012 - May 2016</span></div>
                     </div>
@@ -187,9 +187,10 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+					<h2 class="mb-5">Interests</h2>
+					<p>When I'm not developing websites, I cherish my time engaging in a variety of activities. With a background in education, I am deeply passionate about learning and often find myself drawn to books and documentaries spanning a broad spectrum of topics from technology to psychology.</p>
+					<p>Living in Texas has fostered my love for outdoor activities. I enjoy hiking the local trails, exploring the natural beauty of our state parks, and participating in community events.</p>
+					<p class="mb-0">When indoors, my interests take a turn towards technology and creativity. As an avid fan of both sci-fi and fantasy genres, I love getting lost in a new series or film. Cooking also holds a special place in my heart, often serving as a creative outlet and a means to explore different cultures. Moreover, I dedicate a significant portion of my free time to staying updated with the latest advancements in web development, consistently looking for ways to enhance my skills and knowledge.</p>
                 </div>
             </section>
             <hr class="m-0" />
