--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 				<aside id="testimonials">
 					<h2>Testimonials</h2>
 					<blockquote>
-						<p>"This is a testimonial."</p>
-						<cite>- Person 1</cite>
+						<p>"Having had the pleasure of working with Jonathan, I've been consistently impressed by their dedication, technical ability, and genuine passion for their work. As a Web Developer, Jonathan combines a deep understanding of coding and design principles with a creative approach to problem-solving. Their adaptability and attention to detail have been instrumental in meeting project deadlines without compromising on quality. In addition, Jonathan's background in special education adds a unique perspective to their approach, bringing a level of empathy and inclusivity to their work that sets them apart. I highly recommend Jonathan to any team looking for a driven, skilled, and personable web developer."</p>
+						<cite>- Mark C.</cite>
 					</blockquote>
 					<!-- Add more blockquotes for each testimonial -->
 				</aside>
