--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://raw.githubusercontent.com/jonx0037/jonx0037.github.io/main/styles.css" rel="stylesheet" />
+        <link href="https://raw.githubusercontent.com/jonx0037/jonx0037.github.io/main/startbootstrap-resume-gh-pages/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Hero Section -->
@@ -219,6 +219,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="https://raw.githubusercontent.com/jonx0037/jonx0037.github.io/main/scripts.js"></script>
+        <script src="https://raw.githubusercontent.com/jonx0037/jonx0037.github.io/main/startbootstrap-resume-gh-pages/js/scripts.js"></script>
     </body>
 </html>
