--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>I'm a web developer with a passion for creating beautiful, user-friendly websites.</p>
         </header>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jonathan Rocha</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="coolJon1.jpeg" alt="Profile picture of Jonathan Rocha" /></span>
