--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
             </section>
             <hr class="m-0" />
             <!-- Portfolio Section -->
-            <section id="portfolio">
+            <section class-"Portfolio-Section" id="portfolio">
+               <div class="Portfolio-Section-content">
                 <h2>My Work</h2>
                 <article>
                     <h3>Project 1</h3>
                     <p>Description of project 1.</p>
                 </article>
+               </div>
+             </section>   
                 <!-- Add more articles for each project -->
             </section>
             <hr class="m-0" />
