--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     </head>
     <body id="page-top">
         <!-- Hero Section -->
-        <header id="hero">
-            <h1>Welcome to My Portfolio</h1>
-            <p>I'm a web developer with a passion for creating beautiful, user-friendly websites.</p>
-        </header>
+        <section class="hero-section" id-"Hero">
+          <div class="hero-section-content">
+			<header id="hero">
+				<h1>Welcome to My Portfolio</h1>
+				<p>I'm a web developer with a passion for creating beautiful, user-friendly websites.</p>
+			</header>
+		  </div>
+		</section>  	
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
