--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Hero Section -->
-        <section class="hero-section" id-"Hero">
+        <section class="hero-section" id-"hero">
           <div class="hero-section-content">
 			<header id="hero">
 				<h1>Welcome to My Portfolio</h1>
