--- a/index.html
+++ b/index.html
@@ -118,12 +118,16 @@
             </section>
             <hr class="m-0" />
             <!-- Testimonials Section -->
+			<section classs="testimonials-section" id="testimonials">
+			  <div class"testimonials-section-content">
 				<aside id="testimonials">
 					<h2>Testimonials</h2>
 					<blockquote>
 						<p>"Having had the pleasure of working with Jonathan, I've been consistently impressed by their dedication, technical ability, and genuine passion for their work. As a Web Developer, Jonathan combines a deep understanding of coding and design principles with a creative approach to problem-solving. Their adaptability and attention to detail have been instrumental in meeting project deadlines without compromising on quality. In addition, Jonathan's background in special education adds a unique perspective to their approach, bringing a level of empathy and inclusivity to their work that sets them apart. I highly recommend Jonathan to any team looking for a driven, skilled, and personable web developer."</p>
 						<cite>- Mark C.</cite>
 					</blockquote>
+			  </div>
+			</section>		
 					<!-- Add more blockquotes for each testimonial -->
 				</aside>
             <hr class="m-0" />
