--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a></li>
                 </ul>
             </div>
         </nav>
@@ -205,7 +206,8 @@
             </section>
             <hr class="m-0" />
             <!-- Contact Section -->
-            <section id="contact">
+            <section class="contact-section" id="contact">
+              <div class="contact-section-content">
                 <h2>Contact Me</h2>
                 <p>You can reach me at <a href="mailto:jon.rocha@outlook.com">jon.rocha@outlook.com</a>.</p>
                 <!-- Contact Form -->
@@ -218,6 +220,7 @@
                     <textarea id="message" name="message"></textarea>
                     <input type="submit" value="Send">
                 </form>
+              </div>  
             </section>
             <hr class="m-0" />
         </main>
