--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Jonathan Rocha's Portfolio: Experienced web developer with a passion for creating beautiful, user-friendly websites. Check out my work and get in touch!" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Jonathan Rocha | C/V, Resume</title>
         <link rel="icon" type="image/x-icon" href="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/assets/img/favicon.ico" />
 		<!-- Core theme CSS -->
 		<link href="styles.css" rel="stylesheet" />
@@ -233,24 +233,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="scripts.js"></script>
-       <script>
-      (function (w, d, s, o, f, js, fjs) {
-        w["botsonic_widget"] = o;
-        w[o] =
-          w[o] ||
-          function () {
-            (w[o].q = w[o].q || []).push(arguments);
-          };
-        (js = d.createElement(s)), (fjs = d.getElementsByTagName(s)[0]);
-        js.id = o;
-        js.src = f;
-        js.async = 1;
-        fjs.parentNode.insertBefore(js, fjs);
-      })(window, document, "script", "Botsonic", "https://d1m9uqhmlogh4h.cloudfront.net/CDN/botsonic.min.js");
-      Botsonic("init", {
-        serviceBaseUrl: "https://api.writesonic.com",
-        token: "add3e6f2-a41a-4ba7-b7ae-c5fc13391279",
-      });
-    </script>
     </body>
 </html>
