--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Jonathan Rocha | C/V, Resume</title>
         <link rel="icon" type="image/x-icon" href="https://github.com/jonx0037/jonx0037.github.io/blob/main/startbootstrap-resume-gh-pages/assets/img/favicon.ico" />
 		<!-- Core theme CSS -->
-		<link href="styles.css" rel="stylesheet" />
+		<link href="css/styles.css" rel="stylesheet" />
 		<!-- Font Awesome icons (free version)-->
 		<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 		<!-- Google fonts-->
@@ -232,6 +232,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
