--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 		<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
     </head>
-    <body id="page-top">
-        <!-- Hero Section -->
-        <section class="hero-section" id-"hero">
-          <div class="hero-section-content">
-			<header id="hero">
-				<h1>Welcome to My Portfolio</h1>
-				<p>I'm a web developer with a passion for creating beautiful, user-friendly websites.</p>
-			</header>
-		  </div>
-		</section>  	
+<body id="page-top">
+    <!-- Hero Section -->
+    <section class="hero-section" id="hero">
+        <div class="hero-section-content">
+            <header>
+                <h1>Welcome to My Portfolio</h1>
+                <p>I'm a web developer with a passion for creating beautiful, user-friendly websites.</p>
+            </header>
+        </div>
+    </section>  	
+</body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
