--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         </section>
         <div class="gallery">
           <div class="gallery-item" onclick="openModal(0)">
-            <img src="img/Content Gallery/CG-11.png" alt="Image 1">
+            <img src="img/Content Gallery/CG-11.png" alt="Recognition: Echoes of Time's Passage">
             <div class="hover-text">Your text here</div>
           </div>
           <div class="gallery-item" onclick="openModal(1)">
-            <img src="img/Content Gallery/CG-12.png" alt="Image 2">
+            <img src="img/Content Gallery/CG-12.png" alt="The Journey, Ever-winding, and the Quest for More">
             <div class="hover-text">Your text here</div>
           </div>
           <div class="gallery-item" onclick="openModal(2)">
-            <img src="img/Content Gallery/CG-13.png" alt="Image 3">
+            <img src="img/Content Gallery/CG-13.png" alt="Artistry in the Age of Machines and Chronicles of a Digital Self">
             <div class="hover-text">Your text here</div>
           </div>
         </div>
