--- a/index.html
+++ b/index.html
@@ -244,10 +244,18 @@
             <div class="hover-text">Your text here</div>
           </div>
           <div class="gallery-item" onclick="openModal(2)">
-            <img src="img/Content Gallery/CG-14.png" alt="Artistry in the Age of Machines and Chronicles of a Digital Self">
+            <img src="img/Content Gallery/CG-14.png"
+              alt="Artistry in the Age of Machines and Chronicles of a Digital Self">
             <div class="hover-text">Your text here</div>
           </div>
         </div>
+        <div class="modal">
+          <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <img class="modal-image" id="modal-image" onclick="closeModal()" src="" alt="">
+          </div>
+        </div>
+
         <section>
           <h3>Recognition: Echoes of Time's Passage</h3>
           <p>In this odyssey, accolades aren't mere markers. They resonate, each one echoing the dedication of a man
