--- a/index.html
+++ b/index.html
@@ -830,19 +830,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/Dumpster-Rental-Demo/">Dumpster-Rental-Demo</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">May 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Demo Dumpster Rental Site</a>
                         </strong>
                       </li>
                     </ul>
