--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">My Resume Site</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -808,7 +808,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">Demo Dumpster Rental Site</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -870,7 +870,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">Demo Bounce House SEO Admin Dashboard</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -892,19 +892,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/DemoBounceHouseSEOadminDashboard/">DemoBounceHouseSEOadminDashboard</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">June 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Demonstration Admin Dashboard for Bounce House Rental SEO Client</a>
                         </strong>
                       </li>
                     </ul>
