--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">OLDEcoin</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -954,19 +954,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/OLDEcoin/">OLDEcoin</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">June 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Demo Cryptocurrency Site</a>
                         </strong>
                       </li>
                     </ul>
@@ -994,7 +994,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">Demo Landscaping Company Admin Dashboard</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -1016,19 +1016,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/DemoLandscapingCompanyAdminDashboard/">Demo Landscaping Company Admin Dashboard</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">June 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Demo Landscaping Company Site</a>
                         </strong>
                       </li>
                     </ul>
