--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">JonRocDev</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -1078,19 +1078,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/jonrocdev/">JonRocDev</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">May 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Personal Web Dev Company Site</a>
                         </strong>
                       </li>
                     </ul>
@@ -1118,7 +1118,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">Jonathan Blog</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -1140,19 +1140,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="#">Jonathan Blog</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">May 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Personal Blog Site</a>
                         </strong>
                       </li>
                     </ul>
