--- a/index.html
+++ b/index.html
@@ -1180,7 +1180,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">Lady's Story</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -1202,19 +1202,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="https://jonx0037.github.io/LadyStory/">Lady's Story</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">May 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">Lady's Website/Blog</a>
                         </strong>
                       </li>
                     </ul>
@@ -1242,7 +1242,7 @@
               <div class="modal-body">
                 <div class="title-bar">
                   <div class="col-md-12">
-                    <h2 class="text-center">Our Project</h2>
+                    <h2 class="text-center">The Terran Monthly</h2>
                     <div class="heading-border"></div>
                   </div>
                 </div>
@@ -1264,19 +1264,19 @@
                       including
                       open invoice and partial payments options.</p>
                     <ul class="list-inline item-details">
-                      <li>Client:
+                      <li>
                         <strong>
-                          <a href="#">Techs Soft</a>
+                          <a href="#">The Terran Monthly</a>
                         </strong>
                       </li>
-                      <li>Date:
+                      <li>
                         <strong>
-                          <a href="#">April 2018</a>
+                          <a href="#">May 2023</a>
                         </strong>
                       </li>
-                      <li>Service:
+                      <li>
                         <strong>
-                          <a href="#">Web Development</a>
+                          <a href="#">An Intergalactic Parody News Site</a>
                         </strong>
                       </li>
                     </ul>
